[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbie"
version = "0.1.0"
description = "Dynamic Batching Inference Engine"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "fastapi>=0.109",
    "uvicorn[standard]",
    "numpy",
    "pandas",
    "matplotlib",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["dbie*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
